// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Track Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="root svelte-p26357"
    >
      <a
        class="flex-none"
        href="#/album/3879801547"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-p26357"
      >
        <span
          class="title svelte-p26357"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="artist underlined svelte-p26357"
          href="#/artist/756100103"
        >
          Ben Harper
        </a>
      </div>
       
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Track With Details 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="root svelte-p26357"
    >
      <a
        class="flex-none"
        href="#/album/3879801547"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-p26357"
      >
        <span
          class="title svelte-p26357"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="artist underlined svelte-p26357"
          href="#/artist/756100103"
        >
          Ben Harper
        </a>
      </div>
       
      <div
        class="duration svelte-p26357"
      >
        2:06
      </div>
    </div>
  </div>
</section>
`;
